# KL-42

./: README.md
week_1/: README.md  main.py  pyproject.toml
week_1/src/: ingestor.py  loader.py  processor.py  profiler.py
week_2/: README.md  find_skill_gaps.py  prompt_model.py  pyproject.toml  tag_data.py
week_3/: .env.example  README.md  docker-compose.yml
week_3/backend/: .env  Dockerfile  README.md  pyproject.toml
week_3/backend/src/: app.py
week_3/backend/src/week_2/: find_skill_gaps.py  prompt_model.py  tag_data.py
week_3/backend/src/week_2/data/: jobs_d1.db
week_3/frontend/: .env  Dockerfile  pyproject.toml
week_3/frontend/src/: app.py
week_3/frontend/src/templates/: chat_page.html
