[project]
name = "week-2"
version = "0.1.0"
description = "AI-powered skill gap detection pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai==2.8.0",
    "ollama==0.6.2",
    "python-dotenv==1.2.2",
    "pydantic==2.13.4",
]

[dependency-groups]
dev = [
    "ruff==0.11.*",
]

[tool.ruff]
line-length = 88

