[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.138.0",
    "httpx>=0.28.1",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "starlette==1.3.1",
    "uvicorn==0.49.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.19",
]

[tool.ruff]
line-length = 88
